@@ -1,5 +1,6 @@
 5.1
 	+ Auto-mark gateway as default when adding the only one
+	+ Fix regression populating bridges list on iface configuration
 5.0.10
 	+ Fix failover-checker script
 	+ Make DHCP hooks less error-prone and remove warnings
